--- a/compose.yml
+++ b/compose.yml
@@ -1,9 +1,26 @@
 services:
   app:
     build:
-      context: .src
+      context: ./src
       dockerfile: .infra/app/Dockerfile
     ports:
       - "3000:3000"
+    depends_on:
+      - db
     volumes:
       - ./src:/app
+  db:
+    image: mysql:8.4
+    ports:
+      - "3306:3306"
+    volumes:
+      - data-volume:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=root_password
+      - MYSQL_DATABASE=rails8_simple_api
+      - MYSQL_USER=app_user
+      - MYSQL_PASSWORD=app_password
+
+volumes:
+  data-volume:
+
